backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-backend
  namespace: mern-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mern-backend
  template:
    metadata:
      labels:
        app: mern-backend
    spec:
      containers:
        - name: backend
          image: my-dockerhub-user/mern-backend:latest
          ports:
            - containerPort: 4000
