frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-frontend
  namespace: mern-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mern-frontend
  template:
    metadata:
      labels:
        app: mern-frontend
    spec:
      containers:
        - name: frontend
          image: my-dockerhub-user/mern-frontend:latest
          ports:
            - containerPort: 5000
