backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-backend-service
  namespace: mern-prod
spec:
  selector:
    app: mern-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
