frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-frontend-service
  namespace: mern-prod
spec:
  selector:
    app: mern-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
